fixed layout bugs from tasks SFD- 552 562 565 566

--- a/com_surveyforce/site/assets/css/style.css
+++ b/com_surveyforce/site/assets/css/style.css
@@ -1,5 +1,6 @@
 #sf_search
 {
+  height: 33px;
   display: inline;
 }
 
